feat(health): update response
